:lipstick: Fix misalignment

--- a/src/components/ColorTool/ColorTool.css
+++ b/src/components/ColorTool/ColorTool.css
@@ -2,10 +2,10 @@
   border: 2px solid dodgerblue;
   border-radius: 15px;
   max-width: 700px;
-  padding: 1rem;
+  padding: 2rem;
   width: 50%;
 }
 
 .container * {
-  margin: 1rem;
+  margin-top: 1rem;
 }
